--- a/EFI/CLOVER/config.plist
+++ b/EFI/CLOVER/config.plist
@@ -220,7 +220,7 @@
 	<key>Boot</key>
 	<dict>
 		<key>Arguments</key>
-		<string>-v dart=0 debug=0x100 agdpmod=pikera</string>
+		<string>dart=0 debug=0x100 agdpmod=pikera</string>
 		<key>Debug</key>
 		<false/>
 		<key>DefaultVolume</key>
@@ -249,15 +249,6 @@
 	</dict>
 	<key>Devices</key>
 	<dict>
-		<key>Audio</key>
-		<dict>
-			<key>AFGLowPowerState</key>
-			<true/>
-			<key>Inject</key>
-			<integer>7</integer>
-			<key>ResetHDA</key>
-			<true/>
-		</dict>
 		<key>LANInjection</key>
 		<false/>
 		<key>USB</key>
@@ -490,22 +481,22 @@
 		<key>CsrActiveConfig</key>
 		<string>0x67</string>
 		<key>ROM</key>
-		<data>ZoH7Jy2B</data>
+		<data>U/rQZ349</data>
 	</dict>
 	<key>SMBIOS</key>
 	<dict>
 		<key>BiosReleaseDate</key>
-		<string>03/17/2020</string>
+		<string>01/05/2020</string>
 		<key>BiosVendor</key>
 		<string>Apple Inc.</string>
 		<key>BiosVersion</key>
-		<string>MM81.88Z.F000.B00.2003170108</string>
+		<string>MM81.88Z.F000.B00.2001052107</string>
 		<key>Board-ID</key>
 		<string>Mac-7BA5B2DFE22DDD8C</string>
 		<key>BoardManufacturer</key>
 		<string>Apple Inc.</string>
 		<key>BoardSerialNumber</key>
-		<string>C078457004NKXPGUE</string>
+		<string>C07912101GUKXPG8C</string>
 		<key>BoardType</key>
 		<integer>10</integer>
 		<key>BoardVersion</key>
@@ -517,7 +508,7 @@
 		<key>ChassisType</key>
 		<string>0x09</string>
 		<key>EfiVersion</key>
-		<string>1037.100.359.0.0</string>
+		<string>1037.80.41.0.0</string>
 		<key>Family</key>
 		<string>Mac mini</string>
 		<key>FirmwareFeatures</key>
@@ -528,6 +519,13 @@
 		<string>Part Component</string>
 		<key>Manufacturer</key>
 		<string>Apple Inc.</string>
+		<key>Memory</key>
+		<dict>
+			<key>Channels</key>
+			<integer>0</integer>
+			<key>SlotCount</key>
+			<integer>2</integer>
+		</dict>
 		<key>Mobile</key>
 		<false/>
 		<key>PlatformFeature</key>
@@ -535,16 +533,16 @@
 		<key>ProductName</key>
 		<string>Macmini8,1</string>
 		<key>SerialNumber</key>
-		<string>C07XN5YTJYVX</string>
+		<string>C07YG1Z0JYVX</string>
 		<key>SmUUID</key>
-		<string>E7E255ED-C2D7-4C6D-BCE1-0C5498272D81</string>
+		<string>E00A84DE-A127-4661-8EBF-E59D4C445CDF</string>
 		<key>Version</key>
 		<string>1.0</string>
 	</dict>
 	<key>SystemParameters</key>
 	<dict>
 		<key>CustomUUID</key>
-		<string>4267F63D-3AC1-4263-9588-2E5067A55D66</string>
+		<string>1A0DE398-03FF-50F7-9044-DF1C63677E3D</string>
 		<key>InjectKexts</key>
 		<string>Yes</string>
 		<key>InjectSystemID</key>
